--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=customer_service_app
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_service_app?useJvmCharsetConverters=true?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://localhost:3306/customer_service_app
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
